Etapa 2 - Implementacao das Regras de Negócio

--- a/checkpoint2/appsettings.json
+++ b/checkpoint2/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=mysql;User=root;Password=123;"
-
+    "DefaultConnection": "Server=localhost;Port=3306;Database=estoque;User=root;Password=123;"
   },
   "Logging": {
     "LogLevel": {
